--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    
 
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
@@ -31,13 +30,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <div class="bg-cover" style="background-image: url(background.png)"></div> 
   </head>
   <body>
     <style>
     body {
       background-size: cover;
-      background-image: url("background.png") 
+      background-image: url("http://localhost:3000/background.png") 
     }
   </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
